# onlyfans

./: .gitignore  Dockerfile  Dockerfile.consumer  Dockerfile.dashboard  LICENSE  Makefile  README.md  README_HOTFANS.md  ROADMAP.md  Veille_Technologique_Juste_des_Ventilateurs.md  __init__.py  docker-compose.yml  pyproject.toml  requirements.consumer.txt  requirements.dashboard.txt  requirements.test.txt  requirements.txt
jumeaux-chauds/: Dockerfile  Dockerfile.consumer  Dockerfile.dashboard  LICENSE  Makefile  README.md  __init__.py  docker-compose.yml  exploration.ipynb  modele_thermique_rf.pkl  pyproject.toml  requirements.consumer.txt  requirements.dashboard.txt  requirements.test.txt  requirements.txt  watchdog.py
jumeaux-chauds/api/: __init__.py  deps.py  main.py  models.py  ws.py
jumeaux-chauds/api/routes/: __init__.py  cluster.py  machines.py  simulation.py
jumeaux-chauds/config/: base.yaml  loader.py
jumeaux-chauds/config/scenarios/: nominal.yaml  stress.yaml
jumeaux-chauds/consumer/: __init__.py  mqtt_to_timescale.py  schema.sql
jumeaux-chauds/dashboard/: __init__.py  api_client.py  app.py  ws_client.py
jumeaux-chauds/dashboard/components/: cluster_view.py  energy_panel.py  machine_view.py  (+1 more)
jumeaux-chauds/documents/: roadmap.md  specifications.md  worklog.md
jumeaux-chauds/mqtt/: __init__.py  publisher.py
jumeaux-chauds/scripts/: mqtt_listener.py  run_dashboard.py  run_simulator.py
jumeaux-chauds/simulation/: __init__.py  cluster.py  duration.py  machine.py  noise.py  physics.py  scenarios.py
jumeaux-chauds/tests/: conftest.py  test_api.py  test_config.py  test_machine.py  test_physics.py
juste-ventilateurs/: __init__.py  pyproject.toml  requirements.txt
juste-ventilateurs/features/: engineer.py
juste-ventilateurs/ingest/: export_dataset.py  mqtt_recorder.py
juste-ventilateurs/models/: __init__.py  baseline.py  evaluate.py  labels.py  train.py
(+60 files in other folders)
