[project]
name = "jumeaux-chauds"
version = "1.0.0"
description = "Simulateur de jumeaux numériques IoT"
authors = [{name = "Tristan Vanrullen"}]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.49",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
